[package]
name = "pdb_profiling"
version = "0.1.0"
authors = ["Zefeng Zhu <hydrozzf@qq.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/naturegeorge/pdb-profiling.rs"
description = "🦀The Rust Implementation of pdb-profiling."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
async-std = { version = "1.8.0", features = ["attributes"] }
tokio = { version = "1.0.1", features = ["full"] }
serde_json = "1.0.53"