[package]
name = "pdb_profiling"
version = "0.1.0"
authors = ["Zefeng Zhu <hydrozzf@qq.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/naturegeorge/pdb-profiling.rs"
description = "🦀The Rust Implementation of pdb-profiling."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = ""
serde_json = "1.0"
hyper-tls = "0.5"
bytes = ""
regex = ""
rle_vec = { version = "0.4", features = ["serialize"] }